// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchListControl matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class=" material-design-search-list__item depth-0"
        for="2"
      >
        <input
          class="material-design-search-list__item-input"
          id="2"
          name="Example Post"
          type="checkbox"
          value=""
        />
        <span
          class="material-design-search-list__item-label"
        >
          <span
            class="material-design-search-list__item-name"
          >
            Example Post
          </span>
          <a
            class="material-design-search-list__item-preview"
            href="http://example.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            Preview
          </a>
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class=" material-design-search-list__item depth-0"
      for="2"
    >
      <input
        class="material-design-search-list__item-input"
        id="2"
        name="Example Post"
        type="checkbox"
        value=""
      />
      <span
        class="material-design-search-list__item-label"
      >
        <span
          class="material-design-search-list__item-name"
        >
          Example Post
        </span>
        <a
          class="material-design-search-list__item-preview"
          href="http://example.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          Preview
        </a>
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SearchListControl matches snapshot when no link exists 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class=" material-design-search-list__item depth-0"
        for="2"
      >
        <input
          class="material-design-search-list__item-input"
          id="2"
          name="Example Post"
          type="checkbox"
          value=""
        />
        <span
          class="material-design-search-list__item-label"
        >
          <span
            class="material-design-search-list__item-name"
          >
            Example Post
          </span>
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class=" material-design-search-list__item depth-0"
      for="2"
    >
      <input
        class="material-design-search-list__item-input"
        id="2"
        name="Example Post"
        type="checkbox"
        value=""
      />
      <span
        class="material-design-search-list__item-label"
      >
        <span
          class="material-design-search-list__item-name"
        >
          Example Post
        </span>
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
